# huntflow-webhook-models-py

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  rec_eval.json  test_model.py
.github/workflows/: publish.yml  python-linters.yml
huntflow_webhook_models/: __init__.py  applicant.py  base.py  consts.py  offer.py  recruitment_evaluation.py  response.py  survey_questionary.py  vacancy.py  vacancy_request.py
huntflow_webhook_models/common_models/: account_survey.py  applicant.py  applicant_offer.py  calendar_event.py  hf_base.py  recruitment_evaluation.py  response.py  survey_answer.py  survey_questionary.py  vacancy.py  vacancy_request.py
models/: __init__.py  applicant.py  base.py  base_hook.py
models/common_models/: applicant.py  applicant_base.py  calendar_event.py  vacancy.py  vacancy_base.py
