
[project]
name = "huntflow-webhook-models"
version = "0.1.12"
description = "Huntflow webhooks requests data models"
authors = [
    {name = "Developers huntflow", email = "developer@huntflow.ru"},
]
dependencies = [
    "pydantic>=2.3.0",
    "openapi-schema-pydantic>=1.2.4",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
lint = [
    "isort>=5.11.5",
    "black>=23.3.0",
    "mypy>=1.4.1",
    "flake8>=5.0.4",
    "flake8-builtins>=2.1.0",
    "flake8-bugbear>=23.3.12",
    "flake8-quotes>=3.3.2",
    "flake8-variables-names>=0.0.5",
    "flake8-commas>=2.1.0",
    "setuptools>=67.8.0",
]

[tool.black]
line-length = 100
target-version = ["py38"]


[tool.isort]
line_length = 100
multi_line_output = 3
profile = "black"
default_section = "THIRDPARTY"


[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = ["__pypackages__"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true